fixed gap between product boxes and flex

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -116,7 +116,15 @@ a {
 .margin-mobile {
   margin-top: 3.5rem;
 }
+.custom-gap {
+  gap:1rem;
+}
 @media screen and (max-width:1024px){
+  .custom-gap{
+    display: flex;
+    gap:1rem;
+    flex-direction: column;
+  }
   .custom-overflow{
     overflow: scroll;
   }
